# kyc-compliance-autonomous-agent-final

./: .env.example  .gitattributes  .gitignore  DEMO_CHEAT_SHEET.md  DEMO_GUIDE.md  DEV_LOG.md  README.md  REGISTRATION_NUMBER_SOURCES.md  SAR_FORMATTING_GUIDE.md  SEQUENTIAL_DEMO_PLAN.md  TRUSTABLE_REGISTRATION_SOURCES.md  UI_SAR_FORMATTING_FIX.md  docker-compose.yml
backend/: .gitignore  DEV_LOG.md  pyproject.toml  requirements.txt
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 1ec6282c85a1_add_user_role_enum.py  67e19b9e1c24_add_sanctions_sync_audits_table.py  83bbeee0342b_initial_schema.py  9282248680e4_add_company_news_scheduling_fields.py  a1b2c3d4e5f6_drop_sanctions_sync_audits_table.py  bf3a1eca6616_add_company_deactivation_and_review_.py  ede3be15cf82_add_company_audit_state_table.py
backend/app/: main.py
backend/app/agents/: __init__.py  entity_resolution_agent.py
backend/app/config/: settings.py
backend/app/core/: deps.py  logging.py  security.py
backend/app/database/: session.py
backend/app/middleware/: request_logging.py
backend/app/models/: __init__.py  audit_log.py  company.py  company_audit_state.py  company_director.py  evidence.py  human_review.py  monitoring_run.py  news_article.py  risk_report.py  sanction_match.py  sar_report.py  timeline_event.py  user.py  watchlist_match.py
backend/app/orchestrator/: __init__.py  audit_result.py  orchestrator.py  pipeline.py  scheduler.py
backend/app/routes/: __init__.py  (+8 more)
backend/scripts/: test_news_cadence.py  test_targeted_screening.py
backend/tests/: test_health.py
(+85 files in other folders)
