[project]
name = "continuous-kyc-autonomous-auditor-backend"
version = "0.1.0"
description = "Backend for the Continuous KYC Autonomous Auditor"
requires-python = ">=3.11"

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]

[tool.black]
line-length = 110
target-version = ["py311"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"
